--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
     <div class="vh-100 d-flex justify-content-center align-items-center">
-        <button type="button" class="btn btn-outline-success my-big-btn">Start</button>
+        <button type="button" class="btn btn-outline-success my-big-btn" onclick="location.href='./game.html'">Start</button>
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
